New blogpost - oldest .com domains

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  font-family: "Roboto Slab", serif;
+  font-family: "Lusitana", serif;
   color: #000000;
 }
 
@@ -13,7 +13,7 @@ h4,
 h5,
 h6,
 time {
-  font-family: "Ruda", sans-serif;
+  font-family: "Lusitana", sans-serif;
 }
 
 #container {
@@ -73,7 +73,7 @@ time {
 #container nav {
   border-bottom: solid 3px #cecece;
   padding-bottom: 0.5em;
-  font-family: "Ruda", sans-serif;
+  font-family: "Lusitana", sans-serif;
 }
 
 #container nav ul {
@@ -194,7 +194,7 @@ time {
 
 .meta-aside, #container main section#home ul li aside, #container main article aside {
   margin: 0.5em 0;
-  font-family: "Ruda", sans-serif;
+  font-family: "Lusitana", sans-serif;
   color: #000000;
   font-size: 0.8em;
 }
