--- a/css/styles.css
+++ b/css/styles.css
@@ -147,11 +147,10 @@ time {
 }
 
 #container main article pre {
-  background-color: #ffffcc;
+  background-color: #f0f0f0;
   overflow-x: auto;
   padding: 0.8em;
   font-size: 0.9em;
-  box-shadow: 0 -1px 0 #bbbbbb inset;
 }
 
 #container main article pre code {
@@ -160,7 +159,7 @@ time {
 
 #container main article p code {
   padding: 0.2em;
-  background-color: #ffcccc;
+  background-color: #dbdbdb;
   font-size: 0.9em;
 }
 
